--- a/app/modules/icon/template.hbs
+++ b/app/modules/icon/template.hbs
@@ -26,11 +26,74 @@
 				</td>
 			</tr>
 			<tr>
-				<td>up</td>
-				<td>{{bp-icon icon='up'}}</td>
+				<td>china-money</td>
+				<td>{{bp-icon icon='china-money'}}</td>
 				<td>
 					{{#code-block src="template.hbs" language='handlebars'}}
-						{{up}}
+						{{chinaMoney}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>dashboard</td>
+				<td>{{bp-icon icon='dashboard'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{dashboard}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>data</td>
+				<td>{{bp-icon icon='data'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{data}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>down</td>
+				<td>{{bp-icon icon='down'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{down}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>female</td>
+				<td>{{bp-icon icon='female'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{female}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>growth</td>
+				<td>{{bp-icon icon='growth'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{growth}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>increase</td>
+				<td>{{bp-icon icon='increase'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{increase}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>info</td>
+				<td>{{bp-icon icon='info'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{info}}
 					{{/code-block}}
 				</td>
 			</tr>
@@ -44,6 +107,15 @@
 				</td>
 			</tr>
 			<tr>
+				<td>male</td>
+				<td>{{bp-icon icon='male'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{male}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
 				<td>management</td>
 				<td>{{bp-icon icon='management'}}</td>
 				<td>
@@ -53,11 +125,92 @@
 				</td>
 			</tr>
 			<tr>
+				<td>mission-1</td>
+				<td>{{bp-icon icon='mission-1'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{mission-1}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>mission-2</td>
+				<td>{{bp-icon icon='mission-2'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{mission-2}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
 				<td>more</td>
 				<td>{{bp-icon icon='more'}}</td>
 				<td>
 					{{#code-block src="template.hbs" language='handlebars'}}
 						{{more}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>office-building</td>
+				<td>{{bp-icon icon='office-building'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{office-building}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>pc</td>
+				<td>{{bp-icon icon='pc'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{pc}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>people</td>
+				<td>{{bp-icon icon='people'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{people}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>pie</td>
+				<td>{{bp-icon icon='pie'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{pie}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>pill</td>
+				<td>{{bp-icon icon='pill'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{pill}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>priority-high</td>
+				<td>{{bp-icon icon='priority-high'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{priorityHigh}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>priority-low</td>
+				<td>{{bp-icon icon='priority-low'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{priorityLow}}
 					{{/code-block}}
 				</td>
 			</tr>
@@ -89,47 +242,11 @@
 				</td>
 			</tr>
 			<tr>
-				<td>dashboard</td>
-				<td>{{bp-icon icon='dashboard'}}</td>
+				<td>up</td>
+				<td>{{bp-icon icon='up'}}</td>
 				<td>
 					{{#code-block src="template.hbs" language='handlebars'}}
-						{{dashboard}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>data</td>
-				<td>{{bp-icon icon='data'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{data}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>growth</td>
-				<td>{{bp-icon icon='growth'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{growth}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>pc</td>
-				<td>{{bp-icon icon='pc'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{pc}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>info</td>
-				<td>{{bp-icon icon='info'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{info}}
+						{{up}}
 					{{/code-block}}
 				</td>
 			</tr>
@@ -139,51 +256,6 @@
 				<td>
 					{{#code-block src="template.hbs" language='handlebars'}}
 						{{warning}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>male</td>
-				<td>{{bp-icon icon='male'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{male}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>female</td>
-				<td>{{bp-icon icon='female'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{female}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>increase</td>
-				<td>{{bp-icon icon='increase'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{increase}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>priority-high</td>
-				<td>{{bp-icon icon='priority-high'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{priorityHigh}}
-					{{/code-block}}
-				</td>
-			</tr>
-			<tr>
-				<td>priority-low</td>
-				<td>{{bp-icon icon='priority-low'}}</td>
-				<td>
-					{{#code-block src="template.hbs" language='handlebars'}}
-						{{priorityLow}}
 					{{/code-block}}
 				</td>
 			</tr>
