--- a/app/modules/line/template.hbs
+++ b/app/modules/line/template.hbs
@@ -2,9 +2,7 @@
 <div local-class="sefl-line">
 	{{bp-line
 		title='BP-Component/bp-line'
-		xaxisData=xaxisData
-		lineData=lineData
-		lineColor=lineColor}}
+		lineData=lineData}}
 </div>
 <div class="dropdown-divider"></div>
 <h3>charts - line/tm</h3>
