--- a/app/modules/chart-circle/template.hbs
+++ b/app/modules/chart-circle/template.hbs
@@ -1,6 +1,15 @@
-{{bp-circle}}
+<div style='width: 100px;height: 100px'>
+	{{bp-circle
+		eid="circleone"}}
+</div>
 <div class="dropdown-divider"></div>
 {{!-- {{bp-circle opts=opts}} --}}
 <div class="dropdown-divider"></div>
 <h2>bp-gauge</h2>
 {{bp-gauge}}
+<h2 class="my-4">bp-circle-double</h2>
+<div class="px-4" style="height:332px ">
+	{{bp-circle-double
+		eid="cricleDoubleOne"
+		}}
+</div>
