--- a/app/modules/chart-radar/template.hbs
+++ b/app/modules/chart-radar/template.hbs
@@ -1,11 +1,9 @@
 <h3>charts - pie</h3>
 <div local-class="simple-bar">
-	{{!-- {{bp-radar
-		radarData=radarData
-		radarColor=radarColor
-		}} --}}
-	{{bp-radar}}
+	{{bp-radar
+		eid="radarOne"}}
 </div>
 <div local-class="thin-radar">
-	{{bp-radar}}
+	{{bp-radar
+		eid="radarSecond"}}
 </div>
