--- a/app/modules/default/template.hbs
+++ b/app/modules/default/template.hbs
@@ -20,6 +20,14 @@
 			<th>desc</th>
 		</thead>
 		<tbody>
+			<tr local-class="display-large">
+				<td>display-large</td>
+				<td>落霞与孤鹜齐飞<br> 秋水共长天一色
+				</td>
+				<td>M29/40L</td>
+				<td>N800</td>
+				<td>大标题,一个页面只出现一次</td>
+			</tr>
 			<tr local-class="title">
 				<td>title</td>
 				<td>落霞与孤鹜齐飞<br> 秋水共长天一色
