--- a/app/modules/icon/template.hbs
+++ b/app/modules/icon/template.hbs
@@ -26,11 +26,56 @@
 				</td>
 			</tr>
 			<tr>
+				<td>calendar</td>
+				<td>{{bp-icon icon='calendar'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{calendar}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>check-circle</td>
+				<td>{{bp-icon icon='check-circle'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{check-circle}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>chevron-next-year</td>
+				<td>{{bp-icon icon='chevron-next-year'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{chevron-next-year}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
 				<td>china-money</td>
 				<td>{{bp-icon icon='china-money'}}</td>
 				<td>
 					{{#code-block src="template.hbs" language='handlebars'}}
 						{{chinaMoney}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>credit-card</td>
+				<td>{{bp-icon icon='credit-card'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{creditCard}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>cross</td>
+				<td>{{bp-icon icon='cross'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{cross}}
 					{{/code-block}}
 				</td>
 			</tr>
@@ -62,6 +107,33 @@
 				</td>
 			</tr>
 			<tr>
+				<td>edit</td>
+				<td>{{bp-icon icon='edit'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{edit}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>email</td>
+				<td>{{bp-icon icon='email'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{email}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>error</td>
+				<td>{{bp-icon icon='error'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{error}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
 				<td>female</td>
 				<td>{{bp-icon icon='female'}}</td>
 				<td>
@@ -76,6 +148,15 @@
 				<td>
 					{{#code-block src="template.hbs" language='handlebars'}}
 						{{growth}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>image</td>
+				<td>{{bp-icon icon='image'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{image}}
 					{{/code-block}}
 				</td>
 			</tr>
@@ -125,6 +206,15 @@
 				</td>
 			</tr>
 			<tr>
+				<td>marketplace</td>
+				<td>{{bp-icon icon='marketplace'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{marketplace}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
 				<td>mission-1</td>
 				<td>{{bp-icon icon='mission-1'}}</td>
 				<td>
@@ -143,11 +233,29 @@
 				</td>
 			</tr>
 			<tr>
+				<td>mission-3</td>
+				<td>{{bp-icon icon='mission-3'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{mission-3}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
 				<td>more</td>
 				<td>{{bp-icon icon='more'}}</td>
 				<td>
 					{{#code-block src="template.hbs" language='handlebars'}}
 						{{more}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>notification</td>
+				<td>{{bp-icon icon='notification'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{notification}}
 					{{/code-block}}
 				</td>
 			</tr>
@@ -179,6 +287,15 @@
 				</td>
 			</tr>
 			<tr>
+				<td>person</td>
+				<td>{{bp-icon icon='person'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{person}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
 				<td>pie</td>
 				<td>{{bp-icon icon='pie'}}</td>
 				<td>
@@ -193,6 +310,24 @@
 				<td>
 					{{#code-block src="template.hbs" language='handlebars'}}
 						{{pill}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>point</td>
+				<td>{{bp-icon icon='point'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{point}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>pre-year</td>
+				<td>{{bp-icon icon='pre-year'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{pre-year}}
 					{{/code-block}}
 				</td>
 			</tr>
@@ -215,6 +350,15 @@
 				</td>
 			</tr>
 			<tr>
+				<td>qr</td>
+				<td>{{bp-icon icon='qr'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{qr}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
 				<td>raised-hand</td>
 				<td>{{bp-icon icon='raised-hand'}}</td>
 				<td>
@@ -229,6 +373,33 @@
 				<td>
 					{{#code-block src="template.hbs" language='handlebars'}}
 						{{right}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>search</td>
+				<td>{{bp-icon icon='search'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{search}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>teaching-center</td>
+				<td>{{bp-icon icon='teaching-center'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{teaching-center}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>time</td>
+				<td>{{bp-icon icon='time'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{time}}
 					{{/code-block}}
 				</td>
 			</tr>
