--- a/app/modules/bar/template.hbs
+++ b/app/modules/bar/template.hbs
@@ -6,6 +6,9 @@
 		barData=barData}}
 </div>
 <div class="dropdown-divider"></div>
-{{!-- <div local-class="simple-bar">
-	{{bp-bar/tm}}
-</div> --}}
+<h3>multi bar line</h3>
+<div local-class="multi-bar">
+	{{bp-bar-line
+		eid="barLine"
+		}}
+</div>
