--- a/app/modules/chart-radar/styles.scss
+++ b/app/modules/chart-radar/styles.scss
@@ -1,18 +1,9 @@
 .simple-bar {
 	height: 500px;
 
-	:global(.echarts-chart) {
-		width: 100%;
-		height: 100%;
-	}
 }
 
 .thin-radar {
-	width: 368px;
+	height: 368px;
 	padding: 24px;
-
-	:global(.echarts-chart) {
-		width: 100%;
-		height: 100%;
-	}
 }
