--- a/app/modules/icon/template.hbs
+++ b/app/modules/icon/template.hbs
@@ -44,6 +44,15 @@
 				</td>
 			</tr>
 			<tr>
+				<td>check-circle</td>
+				<td local-class="icon">{{bp-icon icon='check-circle' }}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{check-circle}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
 				<td>chevron-next-year</td>
 				<td>{{bp-icon icon='chevron-next-year'}}</td>
 				<td>
@@ -103,6 +112,15 @@
 				<td>
 					{{#code-block src="template.hbs" language='handlebars'}}
 						{{down}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>download</td>
+				<td>{{bp-icon icon='download'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{download}}
 					{{/code-block}}
 				</td>
 			</tr>
@@ -238,6 +256,15 @@
 				<td>
 					{{#code-block src="template.hbs" language='handlebars'}}
 						{{mission-3}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>mission-4</td>
+				<td>{{bp-icon icon='mission-4'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{mission-4}}
 					{{/code-block}}
 				</td>
 			</tr>
@@ -418,6 +445,15 @@
 				<td>
 					{{#code-block src="template.hbs" language='handlebars'}}
 						{{up}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>upload</td>
+				<td>{{bp-icon icon='upload'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{upload}}
 					{{/code-block}}
 				</td>
 			</tr>
