新增 n200 以及 header-xsmall 的展示样式。

--- a/app/modules/default/styles.scss
+++ b/app/modules/default/styles.scss
@@ -29,6 +29,12 @@
 		}
 	}
 
+	.header-xsmall {
+		td:nth-child(2) {
+			@extend %header-xsmall;
+		}
+	}
+
 	.p-primary {
 		td:nth-child(2) {
 			@extend %p-primary;
