--- a/app/modules/default/template.hbs
+++ b/app/modules/default/template.hbs
@@ -60,6 +60,14 @@
 				<td>n800</td>
 				<td>小标题,通常用于表单页和信息页的信息标题等</td>
 			</tr>
+			<tr local-class="header-xsmall">
+				<td>header-xsmall</td>
+				<td>落霞与孤鹜齐飞<br> 秋水共长天一色
+				</td>
+				<td>M12/17L</td>
+				<td>n200</td>
+				<td>小标题，通常用于表单页和一组信息的分类名称</td>
+			</tr>
 			<tr local-class="p-primary">
 				<td>p-primary</td>
 				<td>落霞与孤鹜齐飞<br> 秋水共长天一色
