--- a/app/modules/icon/template.hbs
+++ b/app/modules/icon/template.hbs
@@ -278,6 +278,15 @@
 				</td>
 			</tr>
 			<tr>
+				<td>nav-person</td>
+				<td>{{bp-icon icon='nav-person'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{nav-person}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
 				<td>notification</td>
 				<td>{{bp-icon icon='notification'}}</td>
 				<td>
