--- a/app/modules/page-header/template.hbs
+++ b/app/modules/page-header/template.hbs
@@ -3,6 +3,7 @@
 	{{#ph.body as |body|}}
 		{{#body.left as |left|}}
 			{{#left.item}}
+				{{#bp-button}}test{{/bp-button}}
 				Here is an incredibly super incredibly super incredibly long title
 			{{/left.item}}
 			{{#left.item}}
