新增 bp-scatter 的演示。

--- a/app/modules/application/template.hbs
+++ b/app/modules/application/template.hbs
@@ -24,6 +24,9 @@
 						SearchBar{{/dd.link-to}}
 				{{/n.dropdown}}
 				{{#n.link-to "card"}}{{bp-icon icon='management'}}Card{{/n.link-to}}
+				{{#n.link-to "charts"}}
+					{{bp-icon icon='management'}}Charts
+				{{/n.link-to}}
 				{{#n.link-to "navs"}}{{bp-icon icon='management'}}Nav{{/n.link-to}}
 				{{#n.link-to "progress"}}{{bp-icon icon='management'}}Progress{{/n.link-to}}
 				{{#n.link-to "modal"}}{{bp-icon icon='management'}}Modal{{/n.link-to}}
