增加 bp-bar-stack 的展示。

--- a/app/modules/charts/template.hbs
+++ b/app/modules/charts/template.hbs
@@ -4,3 +4,9 @@
 		title='scatter title'
 		chartData=model.scatterData}}
 </div>
+<h2>bp-bar-stack</h2>
+<div local-class="stack">
+	{{bp-bar-stack eid='bp-stack' 
+		title='stack title'
+		chartData=model.stackData}}
+</div>
