--- a/app/modules/line/styles.scss
+++ b/app/modules/line/styles.scss
@@ -1,8 +1,4 @@
-.simple-line {
+.simple-line,
+.custom-height {
 	height: 500px;
-
-	:global(.echarts-chart) {
-		width: 100%;
-		height: 100%;
-	}
 }
