--- a/app/modules/line/template.hbs
+++ b/app/modules/line/template.hbs
@@ -1,13 +1,24 @@
 <h3>charts - line</h3>
-<div local-class="sefl-line">
+<div local-class="custom-height self-line">
 	{{bp-line
+		eid="basic-line"
 		title='BP-Component/bp-line'
-		lineData=lineData}}
+		lineData=lineData
+		legendPosition=legendPosition
+		grid=grid}}
 </div>
 <div class="dropdown-divider"></div>
-<h3>charts - line/tm</h3>
-<div local-class="self-line-tm" class="py-4 px-4">
+<h3>charts - lines/legendVertical</h3>
+<div local-class="custom-height self-line-tm" class="py-4 px-4">
 	{{bp-line/tm
+		eid='line-maxview'
+		lineData=lineDataTm
+		lineColor=lineColorTm}}
+</div>
+<h3>charts - line/tm</h3>
+<div local-class="custom-height self-line-tm" class="py-4 px-4">
+	{{bp-line/tm
+		eid='line-tm'
 		title="产品份额竞争趋势"
 		subText='全国'
 		lineData=lineDataTm
