bp-input/number 的展示

--- a/app/modules/application/template.hbs
+++ b/app/modules/application/template.hbs
@@ -9,6 +9,7 @@
 					{{bp-icon icon='management'}} Layout
 				{{/n.link-to}}
 				{{#n.link-to "icon"}}{{bp-icon icon='management'}}Icon{{/n.link-to}}
+				{{#n.link-to "avatar"}}{{bp-icon icon='nav-person'}}Avatar{{/n.link-to}}
 				{{#n.dropdown title='Buttons' icon="management" as |dd|}}
 					{{#dd.link-to "button"}}
 						Button{{/dd.link-to}}
