--- a/app/modules/input/template.hbs
+++ b/app/modules/input/template.hbs
@@ -115,3 +115,5 @@
 {{bp-input/simple title='simple' value=23 vertical=false color='red'}}
 <h4>widthSize</h4>
 {{bp-input/simple title='simple' widthSize='small' vertical=false color='red'}}
+<h3>bp-input/number</h3>
+{{bp-input/number onWarning=(action 'warning')}}
