bp-dashboard 的demo

--- a/app/modules/bar/template.hbs
+++ b/app/modules/bar/template.hbs
@@ -6,9 +6,9 @@
 		barData=barData}}
 </div>
 <div class="dropdown-divider"></div>
-<h3>multi bar line</h3>
+{{!-- <h3>multi bar line</h3>
 <div local-class="multi-bar">
 	{{bp-bar-line
 		eid="barLine"
 		}}
-</div>
+</div> --}}
