demo 的差异更多。

--- a/app/modules/dashboard/template.hbs
+++ b/app/modules/dashboard/template.hbs
@@ -2,5 +2,5 @@
 {{bp-dashboard dashboardModel=model.config}}
 <h2>This is row example.</h2>
 {{#each model.rowConfigs as |row|}}
-	{{bp-row direction='col' rowModel=row}}
+	{{bp-row direction='col' rowModel=row time=model.time}}
 {{/each}}
