--- a/app/modules/dashboard/template.hbs
+++ b/app/modules/dashboard/template.hbs
@@ -1,6 +1,16 @@
 <h2>this is dashboard example.</h2>
 {{bp-dashboard dashboardModel=model.config}}
-<h2>This is row example.</h2>
+<h2>This is row example.For bar</h2>
 {{#each model.rowConfigs as |row|}}
 	{{bp-row direction='col' rowModel=row time=model.time}}
 {{/each}}
+<div class="dropdown-divided"></div>
+<h2>This is radar example</h2>
+{{#bp-layout}}
+	<div local-class='radar-left'>
+		{{bp-row direction='col' rowModel=model.radar time=model.time}}
+	</div>
+	<div local-class='radar-right'>
+		{{bp-row direction='col' rowModel=model.circle time=model.time}}
+	</div>
+{{/bp-layout}}
