修改 radar 的配置。

--- a/app/modules/dashboard/template.hbs
+++ b/app/modules/dashboard/template.hbs
@@ -8,7 +8,7 @@
 <h2>This is radar example</h2>
 {{#bp-layout}}
 	<div local-class='radar-left'>
-		{{!-- {{bp-row direction='col' rowModel=model.radar time=model.time}} --}}
+		{{bp-row direction='col' rowModel=model.radar time=model.time}}
 	</div>
 	<div local-class='radar-right'>
 		{{bp-row direction='col' rowModel=model.circle time=model.time}}
