添加 堆叠图 的配置。

--- a/app/modules/dashboard/template.hbs
+++ b/app/modules/dashboard/template.hbs
@@ -18,5 +18,9 @@
 {{/bp-layout}}
 <h2>This example is for double pies chart</h2>
 {{bp-row direction='col' rowModel=model.doubleCircle}}
+<div class="dropdown-divider"></div>
 <h2>This chart for bar & line</h2>
 {{bp-row direction='col' rowModel=model.barLine}}
+<div class="dropdown-divider"></div>
+<h2>This chart for stack - bar</h2>
+{{bp-row direction='col' rowModel=model.barStack}}
