新增 icon 的说明

--- a/app/modules/icon/template.hbs
+++ b/app/modules/icon/template.hbs
@@ -152,6 +152,15 @@
 				</td>
 			</tr>
 			<tr>
+				<td>export</td>
+				<td>{{bp-icon icon='export'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{export}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
 				<td>female</td>
 				<td>{{bp-icon icon='female'}}</td>
 				<td>
@@ -166,6 +175,33 @@
 				<td>
 					{{#code-block src="template.hbs" language='handlebars'}}
 						{{growth}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>history</td>
+				<td>{{bp-icon icon='history'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{history}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>hospital-building</td>
+				<td>{{bp-icon icon='hospital-building'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{hospitalBuilding}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>hospital-sign</td>
+				<td>{{bp-icon icon='hospital-sign'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{hospitalSign}}
 					{{/code-block}}
 				</td>
 			</tr>
@@ -368,6 +404,15 @@
 				</td>
 			</tr>
 			<tr>
+				<td>preferences</td>
+				<td>{{bp-icon icon='preferences'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{preferences}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
 				<td>priority-high</td>
 				<td>{{bp-icon icon='priority-high'}}</td>
 				<td>
@@ -382,6 +427,24 @@
 				<td>
 					{{#code-block src="template.hbs" language='handlebars'}}
 						{{priorityLow}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>product</td>
+				<td>{{bp-icon icon='product'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{product}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>product-info</td>
+				<td>{{bp-icon icon='product-info'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{productInfo}}
 					{{/code-block}}
 				</td>
 			</tr>
@@ -404,6 +467,15 @@
 				</td>
 			</tr>
 			<tr>
+				<td>representative</td>
+				<td>{{bp-icon icon='representative'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{representative}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
 				<td>right</td>
 				<td>{{bp-icon icon='right'}}</td>
 				<td>
@@ -422,11 +494,47 @@
 				</td>
 			</tr>
 			<tr>
+				<td>sign-out</td>
+				<td>{{bp-icon icon='sign-out'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{signOut}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>story</td>
+				<td>{{bp-icon icon='story'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{story}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>target</td>
+				<td>{{bp-icon icon='target'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{targetIcon}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
 				<td>teaching-center</td>
 				<td>{{bp-icon icon='teaching-center'}}</td>
 				<td>
 					{{#code-block src="template.hbs" language='handlebars'}}
 						{{teaching-center}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>team</td>
+				<td>{{bp-icon icon='team'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{team}}
 					{{/code-block}}
 				</td>
 			</tr>
