--- a/app/modules/icon/template.hbs
+++ b/app/modules/icon/template.hbs
@@ -269,6 +269,15 @@
 				</td>
 			</tr>
 			<tr>
+				<td>meeting-quota</td>
+				<td>{{bp-icon icon='meeting-quota'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{meetingQuota}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
 				<td>mission-1</td>
 				<td>{{bp-icon icon='mission-1'}}</td>
 				<td>
@@ -544,6 +553,15 @@
 				<td>
 					{{#code-block src="template.hbs" language='handlebars'}}
 						{{time}}
+					{{/code-block}}
+				</td>
+			</tr>
+			<tr>
+				<td>time-left</td>
+				<td>{{bp-icon icon='time-left'}}</td>
+				<td>
+					{{#code-block src="template.hbs" language='handlebars'}}
+						{{timeLeft}}
 					{{/code-block}}
 				</td>
 			</tr>
