--- a/app/modules/dashboard/template.hbs
+++ b/app/modules/dashboard/template.hbs
@@ -29,13 +29,13 @@
 <h4>历史销售报告-产品销售报告</h4>
 {{#bp-layout}}
 	<div local-class='circle-left'>
-		{{bp-row direction='col' rowModel=model.tmProductCircle0 condition=model.tmProductCircle0Condition}}
+		{{bp-row direction='col' rowModel=model.tmProductCircle0 conditions=model.tmProductCircle0Condition}}
 	</div>
 	<div local-class='circle-right'>
-		{{bp-row direction='col'  rowModel=model.tmProductCircle1 condition=model.tmProductCircle0Condition}}
+		{{bp-row direction='col'  rowModel=model.tmProductCircle1 conditions=model.tmProductCircle0Condition}}
 	</div>
 {{/bp-layout}}
-{{bp-row direction='col' rowModel=model.tmProductBarLine0}}
+{{bp-row direction='col' rowModel=model.tmProductBarLine0 conditions=model.tmProductBarLineCondition}}
 <div class="dropdown-divider"></div>
 <h4>历史销售报告-区域销售报告</h4>
 {{#bp-layout}}
