--- a/app/modules/dashboard/template.hbs
+++ b/app/modules/dashboard/template.hbs
@@ -25,6 +25,10 @@
 <h2>This chart for stack - bar</h2>
 {{bp-row direction='col' rowModel=model.barStack}} --}}
 <h3>TMIST Charts</h3>
+<h4>参考信息-团队成员信息</h4>
+{{bp-row direction='col' rowModel=model.tmRadar conditions=model.tmRadarCondition}}
+<h4>产品竞品信息-药品份额竞争趋势</h4>
+{{bp-row direction='col' rowModel=model.tmProdsLines conditions=model.tmProdsLinesCondition}}
 <div class="dropdown-divider"></div>
 <h4>历史销售报告-产品销售报告</h4>
 {{#bp-layout}}
@@ -35,7 +39,7 @@
 		{{bp-row direction='col'  rowModel=model.tmProductCircle1 conditions=model.tmProductCircle0Condition}}
 	</div>
 {{/bp-layout}}
-{{bp-row direction='col' rowModel=model.tmProductBarLine0 conditions=model.tmProductBarLineCondition}}
+{{!-- {{bp-row direction='col' rowModel=model.tmProductBarLine0 conditions=model.tmProductBarLineCondition}} --}}
 <div class="dropdown-divider"></div>
 <h4>历史销售报告-区域销售报告</h4>
 {{#bp-layout}}
